<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".fragments.ItemFragment">

    <TextView
        android:id="@+id/tv_headline"
        style="@style/TVHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sleep"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_plus"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/round_corners"
        android:baselineAlignBottom="true"
        android:contentDescription="@string/plus"
        android:src="@drawable/ic_baseline_more_24"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_headline"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/btn_minus"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_corners"
        android:baselineAlignBottom="true"
        android:contentDescription="@string/minus"
        android:src="@drawable/ic_baseline_less_24"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_headline"
        app:layout_constraintEnd_toStartOf="@+id/btn_plus" />

    <LinearLayout
        android:id="@+id/ll_pb_and_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_headline">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:max="100" />

        <TextView
            android:id="@+id/tv_points"
            style="@style/TVAdditionalDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_headline_stats"
        style="@style/TVHeadline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/stats_headline"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_pb_and_points" />

    <TextView
        android:id="@+id/tv_dates_stats"
        style="@style/TVMainDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_headline_stats"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/graph"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_headline_stats">

        <ProgressBar
            android:id="@+id/pb_loading_graph"
            style="?android:attr/progressBarStyle"
            android:layout_width="100dp"
            android:layout_height="100dp" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="220dp"
            android:visibility="gone" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>